去掉了提示功能

--- a/index.html
+++ b/index.html
@@ -47,15 +47,14 @@
         
         <!-- 标准游戏控制按钮 -->
         <div id="game-controls" class="controls">
-            <button id="hint-btn" onclick="provideHint()">提示</button>
-            <button onclick="backToSelection()">返回选择</button>
+            <button onclick="backToSelection()">选择打卡点</button>
         </div>
 
         <!-- 已通关浏览控制按钮 -->
         <div id="solved-controls" class="controls" style="display: none;">
             <button id="replay-btn" onclick="replayGame()">重玩</button>
             <button id="info-btn" onclick="showSettlement()">打卡点信息</button>
-            <button onclick="backToSelection()">返回选择</button>
+            <button onclick="backToSelection()">选择打卡点</button>
         </div>
     </div>
 
